--- a/Choose_one.ipynb
+++ b/Choose_one.ipynb
@@ -2,9 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "b931751f-de0e-4444-ae5c-8a54cf9ed528",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -21,12 +27,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7543c0e7eac044069ac9cc572e7e7ad9",
+       "model_id": "ef4810b5c45849f3be5af8ecddf13044",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(Dropdown(description='Choose view:', options={'X-Y plane': 'XY', 'X-Z plane': 'XZ'}, value='XY'…"
+       "VBox(children=(Dropdown(description='Choose view:', options={'X-Y plane': 'XY', 'X-Z plane': 'XZ', '3D': '3D'}…"
       ]
      },
      "metadata": {},
@@ -37,6 +43,7 @@
     "import import_ipynb\n",
     "import Scheme_circle as el_XY\n",
     "import Scheme_ellipse as el_XZ\n",
+    "import scheme_3D as el_3D\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import ipywidgets as widgets\n",
@@ -45,7 +52,7 @@
     "\n",
     "# Dropdown menu\n",
     "dropdown = widgets.Dropdown(\n",
-    "    options={\"X-Y plane\": \"XY\", \"X-Z plane\": \"XZ\"},\n",
+    "    options={\"X-Y plane\": \"XY\", \"X-Z plane\": \"XZ\", \"3D\" : \"3D\"},\n",
     "    description='Choose view:'\n",
     ")\n",
     "display(Markdown(r\"\"\"Here is diagram on how acceleration affects density distribution for prolate/oblate ellipsoid of the form: $x^2+y^2+k^2 z^2 = C$\n",
@@ -56,6 +63,10 @@
     "edd_slider=widgets.FloatSlider(min=0, max=1, step=0.1, value=0.4, description=r\"$\\varepsilon_{dd}$\")\n",
     "phi_slider=widgets.IntSlider(min=0, max=90, step=1,value=10, description=r\"$\\phi$\")\n",
     "theta_slider=widgets.IntSlider(min=0, max=90, step=1,value=0, description=r\"$\\theta$\")\n",
+    "\n",
+    "phi_B_slider=widgets.IntSlider(min=0, max=180, step=1,value=10, description=r\"$\\phi_B$\")\n",
+    "theta_B_slider=widgets.IntSlider(min=0, max=180, step=1,value=0, description=r\"$\\theta_B$\")\n",
+    "theta_A_slider=widgets.IntSlider(min=0, max=180, step=1,value=20, description=r\"$\\theta_A$\")\n",
     "\n",
     "plot_output = widgets.Output()\n",
     "text_output = widgets.Output()\n",
@@ -69,9 +80,15 @@
     "               el_XY.plot_ellipse_XY(k_slider.value, edd_slider.value, phi_slider.value, theta_slider.value)\n",
     "            elif dropdown.value == 'XZ':\n",
     "               el_XZ.plot_ellipse_XZ(k_slider.value, edd_slider.value, phi_slider.value, theta_slider.value)\n",
+    "            elif dropdown.value == '3D':\n",
+    "               el_3D.plot_3D_ellipsoid(k_slider.value, edd_slider.value, theta_B_slider.value, phi_B_slider.value, theta_A_slider.value)\n",
     "\n",
     "def update_text():\n",
-    "    shared_text=r\"\"\"\n",
+    "    if dropdown.value == \"XY\":\n",
+    "        md_text = r\"\"\"\n",
+    "***\n",
+    "XY-view\n",
+    "\n",
     "Left side: display plane view of dipole distribution inside ellipsoid\n",
     "Right side: display how the density gradient induced by acceleration is deformed due to dipolar interaction.\n",
     "\n",
@@ -80,19 +97,29 @@
     "The cyan dashed line depict axis of zero deflection: if the magnetic field is directed along it, the density gradient is just scaled, and not deflected. Such lines do not depend on $\\varepsilon_{{dd}}$. \n",
     "And the green line depicts all variations of density gradient, assuming acceleration is fixed, and the magnetic field is varied in all possible directions.\n",
     "\"\"\"\n",
-    "\n",
-    "    # md_text = \"\"\n",
-    "    if dropdown.value == \"XY\":\n",
-    "        md_text = r\"\"\"\n",
-    "***\n",
-    "XY-view\n",
-    "\"\"\"\n",
     "    elif dropdown.value == \"XZ\":\n",
     "        md_text = r\"\"\"\n",
     "***\n",
     "XZ-view (the total volume is assumed to be fixed)\n",
+    "\n",
+    "Left side: display plane view of dipole distribution inside ellipsoid\n",
+    "Right side: display how the density gradient induced by acceleration is deformed due to dipolar interaction.\n",
+    "\n",
+    "Angle $\\theta$ regulates the direction of the acceleration (red vector), while $\\phi$ regulates the direction of the magnetic field (purple vector)\n",
+    "The green vector shows the total direction of the density gradient. Due to dipolar interaction, it can change in direction, as well by amplitude. If the dipolar interaction is absent, the density gradient is simply opposite to the acceleration.\n",
+    "The cyan dashed line depict axis of zero deflection: if the magnetic field is directed along it, the density gradient is just scaled, and not deflected. Such lines do not depend on $\\varepsilon_{{dd}}$. \n",
+    "And the green line depicts all variations of density gradient, assuming acceleration is fixed, and the magnetic field is varied in all possible directions.\n",
     "\"\"\"\n",
-    "    full_text=md_text+shared_text\n",
+    "    elif dropdown.value == \"3D\":\n",
+    "        md_text = r\"\"\"\n",
+    "***\n",
+    "3D-view \n",
+    "\n",
+    "Angle $\\theta_A$ regulates the direction of the acceleration (red vector), while $\\phi_B$ and $\\theta_A$ regulate the direction of the magnetic field (purple vector)\n",
+    "The green vector shows the total direction of the density gradient. Due to dipolar interaction, it can change in direction, as well by amplitude. If the dipolar interaction is absent, the density gradient is simply opposite to the acceleration.\n",
+    "A reddish surface presents all possible configurations of the magnetic field for fixed acceleration.\n",
+    "\"\"\"\n",
+    "    full_text=md_text\n",
     "    with text_output:\n",
     "        clear_output(wait=True)\n",
     "        display(Markdown(full_text))\n",
@@ -102,11 +129,13 @@
     "        controls_box.children = [k_slider, edd_slider, phi_slider, theta_slider]\n",
     "    elif dropdown.value == \"XZ\":\n",
     "        controls_box.children = [k_slider, edd_slider, phi_slider, theta_slider]    \n",
+    "    elif dropdown.value == \"3D\":\n",
+    "        controls_box.children = [k_slider, edd_slider, theta_B_slider, phi_B_slider, theta_A_slider]    \n",
     "    update_plot()\n",
     "    update_text()\n",
     "\n",
     "dropdown.observe(update_controls, names=\"value\")\n",
-    "for slider in [k_slider, edd_slider, phi_slider, theta_slider]:\n",
+    "for slider in [k_slider, edd_slider, phi_slider, theta_slider, theta_B_slider, phi_B_slider, theta_A_slider]:\n",
     "    slider.observe(lambda change: [update_plot(), update_text()], names=\"value\")\n",
     "\n",
     "update_controls()  # set up initial controls\n",
