--- a/Choose_one_html.ipynb
+++ b/Choose_one_html.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "672c2f02-ad93-416b-9c7f-bc24bc63de80",
    "metadata": {
     "editable": true,
@@ -35,12 +35,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "849f22a8880b4a53811f2e25a18176fd",
+       "model_id": "5c0546aceacb4c18aa8d6102c64518af",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(Dropdown(description='Choose view:', options={'X-Y plane': 'XY', 'X-Z plane': 'XZ'}, value='XY'…"
+       "VBox(children=(Dropdown(description='Choose view:', options={'X-Y plane': 'XY', 'X-Z plane': 'XZ', '3D': '3D'}…"
       ]
      },
      "metadata": {},
@@ -51,6 +51,7 @@
     "import import_ipynb\n",
     "import Scheme_circle as el_XY\n",
     "import Scheme_ellipse as el_XZ\n",
+    "import scheme_3D as el_3D\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import ipywidgets as widgets\n",
@@ -59,7 +60,7 @@
     "\n",
     "# Dropdown menu\n",
     "dropdown = widgets.Dropdown(\n",
-    "    options={\"X-Y plane\": \"XY\", \"X-Z plane\": \"XZ\"},\n",
+    "    options={\"X-Y plane\": \"XY\", \"X-Z plane\": \"XZ\", \"3D\" : \"3D\"},\n",
     "    description='Choose view:'\n",
     ")\n",
     "display(HTML(r\"\"\"\n",
@@ -79,6 +80,10 @@
     "phi_slider=widgets.IntSlider(min=0, max=180, step=1,value=10, description=\"φ\")\n",
     "theta_slider=widgets.IntSlider(min=0, max=90, step=1,value=0, description=\"θ\")\n",
     "\n",
+    "phi_B_slider=widgets.IntSlider(min=0, max=180, step=1,value=10, description=\"ϕB\")\n",
+    "theta_B_slider=widgets.IntSlider(min=0, max=180, step=1,value=0, description=\"θB\")\n",
+    "theta_A_slider=widgets.IntSlider(min=0, max=180, step=1,value=20, description=\"θA\")\n",
+    "\n",
     "plot_output = widgets.Output()\n",
     "text_output = widgets.Output()\n",
     "controls_box = widgets.VBox()\n",
@@ -91,9 +96,75 @@
     "               el_XY.plot_ellipse_XY(k_slider.value, edd_slider.value, phi_slider.value, theta_slider.value)\n",
     "            elif dropdown.value == 'XZ':\n",
     "               el_XZ.plot_ellipse_XZ(k_slider.value, edd_slider.value, phi_slider.value, theta_slider.value)\n",
+    "            elif dropdown.value == '3D':\n",
+    "               el_3D.plot_3D_ellipsoid(k_slider.value, edd_slider.value, theta_B_slider.value, phi_B_slider.value, theta_A_slider.value)\n",
     "\n",
     "def update_text():\n",
-    "    shared_text=r\"\"\"\n",
+    "#     shared_text=r\"\"\"\n",
+    "# <p><strong>Left side:</strong> display plane view of dipole distribution inside the ellipsoid.</p>\n",
+    "\n",
+    "# <p><strong>Right side:</strong> display how the density gradient induced by acceleration is deformed due to dipolar interaction.</p>\n",
+    "\n",
+    "# <p>\n",
+    "# Angle θ regulates the direction of the acceleration\n",
+    "# (red vector), while φ\n",
+    "# regulates the direction of the magnetic field\n",
+    "# (purple vector).\n",
+    "# </p>\n",
+    "\n",
+    "# <p>\n",
+    "# The green vector shows the total direction\n",
+    "# of the density gradient. Due to dipolar interaction, it can change both in\n",
+    "# direction and in amplitude. If the dipolar interaction is absent, the density\n",
+    "# gradient is simply opposite to the acceleration.\n",
+    "# </p>\n",
+    "\n",
+    "# <p>\n",
+    "# The cyan dashed line depicts the axis of zero\n",
+    "# deflection: if the magnetic field is directed along this axis, the density\n",
+    "# gradient is only scaled and not deflected. Such lines do not depend on\n",
+    "# ε<sub>dd</sub>. And the green line depicts all variations of density gradient, \n",
+    "# assuming acceleration is fixed, and the magnetic field is varied in all possible directions.\n",
+    "# </p>\n",
+    "# \"\"\"\n",
+    "\n",
+    "    # md_text = \"\"\n",
+    "    if dropdown.value == \"XY\":\n",
+    "        md_text = r\"\"\"\n",
+    "<hr>\n",
+    "<p><strong>XY-view</strong></p>\n",
+    "\n",
+    "<p><strong>Left side:</strong> display plane view of dipole distribution inside the ellipsoid.</p>\n",
+    "\n",
+    "<p><strong>Right side:</strong> display how the density gradient induced by acceleration is deformed due to dipolar interaction.</p>\n",
+    "\n",
+    "<p>\n",
+    "Angle θ regulates the direction of the acceleration\n",
+    "(red vector), while φ\n",
+    "regulates the direction of the magnetic field\n",
+    "(purple vector).\n",
+    "</p>\n",
+    "\n",
+    "<p>\n",
+    "The green vector shows the total direction\n",
+    "of the density gradient. Due to dipolar interaction, it can change both in\n",
+    "direction and in amplitude. If the dipolar interaction is absent, the density\n",
+    "gradient is simply opposite to the acceleration.\n",
+    "</p>\n",
+    "\n",
+    "<p>\n",
+    "The cyan dashed line depicts the axis of zero\n",
+    "deflection: if the magnetic field is directed along this axis, the density\n",
+    "gradient is only scaled and not deflected. Such lines do not depend on\n",
+    "ε<sub>dd</sub>. And the green line depicts all variations of density gradient, \n",
+    "assuming acceleration is fixed, and the magnetic field is varied in all possible directions.\n",
+    "</p>\n",
+    "\"\"\"\n",
+    "    elif dropdown.value == \"XZ\":\n",
+    "        md_text = r\"\"\"\n",
+    "<hr>\n",
+    "<p><strong>XZ-view</strong>   (the total volume is assumed to be fixed)</p>\n",
+    "\n",
     "<p><strong>Left side:</strong> display plane view of dipole distribution inside the ellipsoid.</p>\n",
     "\n",
     "<p><strong>Right side:</strong> display how the density gradient induced by acceleration is deformed due to dipolar interaction.</p>\n",
@@ -121,18 +192,18 @@
     "</p>\n",
     "\"\"\"\n",
     "\n",
-    "    # md_text = \"\"\n",
-    "    if dropdown.value == \"XY\":\n",
+    "    elif dropdown.value == \"3D\":\n",
     "        md_text = r\"\"\"\n",
     "<hr>\n",
-    "<p><strong>XY-view</strong></p>\n",
+    "<p><strong>3D-view</strong> </p>\n",
+    "\n",
+    "<p>\n",
+    "Angle θ<sub>A</sub> regulates the direction of the acceleration (red vector), while θ<sub>B</sub> and φ<sub>B</sub> regulate the direction of the magnetic field (purple vector)\n",
+    "The green vector shows the total direction of the density gradient. Due to dipolar interaction, it can change in direction, as well by amplitude. If the dipolar interaction is absent, the density gradient is simply opposite to the acceleration.\n",
+    "A reddish surface presents all possible configurations of the magnetic field for fixed acceleration.\n",
+    "</p>\n",
     "\"\"\"\n",
-    "    elif dropdown.value == \"XZ\":\n",
-    "        md_text = r\"\"\"\n",
-    "<hr>\n",
-    "<p><strong>XZ-view</strong>   (the total volume is assumed to be fixed)</p>\n",
-    "\"\"\"\n",
-    "    full_text=md_text+shared_text\n",
+    "    full_text=md_text\n",
     "    with text_output:\n",
     "        clear_output(wait=True)\n",
     "        display(HTML(full_text))\n",
@@ -142,11 +213,13 @@
     "        controls_box.children = [k_slider, edd_slider, phi_slider, theta_slider]\n",
     "    elif dropdown.value == \"XZ\":\n",
     "        controls_box.children = [k_slider, edd_slider, phi_slider, theta_slider]\n",
+    "    elif dropdown.value == \"3D\":\n",
+    "        controls_box.children = [k_slider, edd_slider, theta_B_slider, phi_B_slider, theta_A_slider]  \n",
     "    update_plot()\n",
     "    update_text()\n",
     "\n",
     "dropdown.observe(update_controls, names=\"value\")\n",
-    "for slider in [k_slider, edd_slider, phi_slider, theta_slider]:\n",
+    "for slider in [k_slider, edd_slider, phi_slider, theta_slider, theta_B_slider, phi_B_slider, theta_A_slider]:\n",
     "    slider.observe(lambda change: [update_plot(), update_text()], names=\"value\")\n",
     "\n",
     "update_controls()  # set up initial controls\n",
