--- a/Deformation_surf.ipynb
+++ b/Deformation_surf.ipynb
@@ -2,16 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "e417e1f1-1b50-40dc-9a2f-0ba99a869aef",
    "metadata": {
-    "scrolled": true
+    "editable": true,
+    "scrolled": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a18f956f2da548e9960b83abe9c85c16",
+       "model_id": "f7c66b8cb4cb4f0ab6049bb39123795e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -24,7 +29,7 @@
     }
    ],
    "source": [
-    "# %matplotlib widget\n",
+    "%matplotlib widget\n",
     "# %matplotlib inline\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -66,7 +71,7 @@
     "# This is plot which demonstate surface of how density gradient vector shifts, with all possible directions of magetic fields\n",
     "def plot_3D_ellipsoid2(k=1.01, e_dd=0.7,theta_A_deg=76):\n",
     "    ax.clear()\n",
-    "    phi_A_deg=0\n",
+    "    phi_A_deg=90\n",
     "    phi_A = np.radians(phi_A_deg)  \n",
     "    theta_A = np.radians(theta_A_deg)\n",
     "\n",
@@ -93,32 +98,27 @@
     "    # ax.set_xlim(-1.5,1.5);\n",
     "    # ax.set_ylim(-1.5,1.5);\n",
     "    # ax.set_zlim(-1.5,1.5);\n",
+    "    ax.set_xlabel('X')\n",
+    "    ax.set_ylabel('Y')\n",
+    "    ax.set_zlabel('Z')\n",
     "    plt.show();\n",
     "    # plt.close(f);  \n",
-    "    f.canvas.draw_idle()\n",
+    "    # f.canvas.draw_idle()\n",
     "    \n",
-    "f = plt.figure(figsize=(8, 5));\n",
+    "f = plt.figure(figsize=(5, 4));\n",
     "ax=plt.axes(projection='3d');\n",
     "\n",
-    "# interact(plot_3D_ellipsoid2,\n",
-    "#          k=(0.1,4,0.01),\n",
-    "#          e_dd=(0,1,0.1),\n",
-    "#          theta_A_deg=(0, 180, 2),\n",
-    "#          );"
+    "interact(plot_3D_ellipsoid2,\n",
+    "         k=(0.1,4,0.01),\n",
+    "         e_dd=(0,1,0.1),\n",
+    "         theta_A_deg=(0, 180, 2),\n",
+    "         );"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f5823cf-f94a-47ba-9d25-d14e3c34db17",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e04a6ffc-6c4e-4eaa-b94e-3d2524e1914a",
+   "id": "99bcede4-519d-489b-a6b0-b28a14f8e102",
    "metadata": {},
    "outputs": [],
    "source": []
