--- a/scheme_3D.ipynb
+++ b/scheme_3D.ipynb
@@ -2,14 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "469b8a6e-2c44-4216-b99b-059f415b4d16",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1b3fb5761b074bcc903e823b50bad611",
+       "model_id": "5d70ebbd6b034b228d5603572d2f5841",
        "version_major": 2,
        "version_minor": 0
       },
@@ -22,7 +28,7 @@
     }
    ],
    "source": [
-    "#%matplotlib widget\n",
+    "#%matplotlib widget #uncomment to be able rotate plot separately\n",
     "# %matplotlib inline\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -31,7 +37,7 @@
     "from math import pi\n",
     "from matplotlib import cm\n",
     "\n",
-    "# This function calculates a matrix, which transfrom given acceleration vector\n",
+    "# This function calculates a matrix, which transfroms given acceleration vector\n",
     "def Dipolar_matrix(k, e_dd, theta, phi):\n",
     "    if k==1:\n",
     "        F1=0.8\n",
@@ -72,11 +78,13 @@
     "    C=Dipolar_matrix(k, e_dd, theta_B, phi_B)\n",
     "    A_eff_vec=-C@A_vec\n",
     "\n",
-    "    phi_lin=np.linspace(0,pi,200)\n",
-    "    theta_lin=np.linspace(0,pi,200)\n",
-    "    X_surf=np.zeros((200,200))\n",
-    "    Y_surf=np.zeros((200,200))\n",
-    "    Z_surf=np.zeros((200,200))\n",
+    "    N_p=150;\n",
+    "    phi_lin=np.linspace(0,2*pi,N_p)\n",
+    "    theta_lin=np.linspace(0,pi,N_p)\n",
+    "    X_surf=np.zeros((N_p,N_p))\n",
+    "    Y_surf=np.zeros((N_p,N_p))\n",
+    "    Z_surf=np.zeros((N_p,N_p))\n",
+    "\n",
     "    for i in range(len(phi_lin)):\n",
     "        for j in range(len(theta_lin)):\n",
     "            C1=Dipolar_matrix(k, e_dd, theta_lin[i], phi_lin[j])\n",
@@ -84,7 +92,10 @@
     "            X_surf[i,j]=A0[0]\n",
     "            Y_surf[i,j]=A0[1]\n",
     "            Z_surf[i,j]=A0[2]\n",
-    "    ax.plot_surface(X_surf,Y_surf,Z_surf, alpha=0.5, cmap=cm.hot);\n",
+    "    \n",
+    "    ax.plot_surface(X_surf,Y_surf,Z_surf, alpha=0.6, cmap=cm.Reds, rcount=50,\n",
+    "    ccount=50, shade=False, antialiased=True)\n",
+    "\n",
     "    ax.quiver(0,0,0,A_vec[0],A_vec[1],A_vec[2],color='red');\n",
     "    ax.quiver(0,0,0,B_vec[0],B_vec[1],B_vec[2],color='purple');\n",
     "    ax.quiver(0,0,0,A_eff_vec[0],A_eff_vec[1],A_eff_vec[2],color='green');\n",
@@ -92,7 +103,11 @@
     "    ax.set_xlim(-1.5,1.5);\n",
     "    ax.set_ylim(-1.5,1.5);\n",
     "    ax.set_zlim(-1.5,1.5);\n",
+    "    ax.set_xlabel('X')\n",
+    "    ax.set_ylabel('Y')\n",
+    "    ax.set_zlabel('Z')\n",
     "    plt.show();\n",
+    "    # f.canvas.draw_idle()\n",
     "\n",
     "# interact(plot_3D_ellipsoid,\n",
     "#          k=(0.25,4,0.05),\n",
